--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,1 +1,11 @@
+{% if user_ip %}
 <h1>Hello world, {{ user_ip }}</h1>
+{% else %}
+<a href="{{ url_for('index')}}">Ir a inicio</a>
+{% endif %}
+
+<ul>
+    {% for todo in todos %}
+    <li>{{ todo }}</li>
+    {% endfor %}
+</ul>
