--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,11 +1,20 @@
-{% if user_ip %}
-<h1>Hello world, {{ user_ip }}</h1>
-{% else %}
-<a href="{{ url_for('index')}}">Ir a inicio</a>
-{% endif %}
+{% extends "base.html" %}
+{% import "macros.html" as macros %}
 
-<ul>
-    {% for todo in todos %}
-    <li>{{ todo }}</li>
-    {% endfor %}
-</ul>
+{% block title %}{{ super() }}HELLO{% endblock title %}
+{% block content %}
+{% if user_ip %}
+    <h1>Hello world, {{ user_ip }}</h1>
+    {% else %}
+    <a href="{{ url_for('index')}}">Ir a inicio</a>
+    {% endif %}
+
+    <ul>
+        {% for todo in todos %}
+        {{ macros.render_todo(todo) }}
+        {% endfor %}
+    </ul>
+{% endblock content %}
+
+
+
