--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,6 @@
 <nav>
     <ul>
+        <img src="{{ url_for('static', filename='img/platzi.png')}}" alt="">
         <li><a href="{{ url_for('index') }}">Inicio</a></li>
         <li><a href="http://platzi.com">Ir a Platzi</a></li>
     </ul>
