feat: Flask Bootstrap

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "bootstrap/base.html" %}
+
+{% block head %}
+    {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
     <title>{% block title %}FLASK | {% endblock title %}</title>
-</head>
-<body>
-    <header>
-        {% include "navbar.html" %}
-    </header>
+{% endblock head %}
+
+{% block body %}
+    {% block navbar %}{% include "navbar.html" %}{% endblock navbar %}
+    
     {% block content %}{% endblock content %}
-</body>
-</html>
+{% endblock body %}
