--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,4 @@
+
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -25,3 +26,11 @@
         </div>
     </div>
 </div>
+
+<!--<nav>
+    <ul>
+        <img src="{{ url_for('static', filename='img/platzi.png')}}" alt="">
+        <li><a href="{{ url_for('index') }}">Inicio</a></li>
+        <li><a href="http://platzi.com">Ir a Platzi</a></li>
+    </ul>
+</nav>-->
