--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "macros.html" as macros %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}{{ super() }}HELLO{% endblock title %}
 {% block content %}
@@ -9,6 +10,13 @@
     <a href="{{ url_for('index')}}">Ir a inicio</a>
     {% endif %}
 
+    <div class="container">
+        <!-- <form action="{{ url_for('hello') }}" method="POST">
+            {{ login_form.username }}
+            {{ login_form.username.label }}
+        </form> -->
+        {{ wtf.quick_form(login_form) }}
+    </div>
     <ul>
         {% for todo in todos %}
         {{ macros.render_todo(todo) }}
