feat: Using POST method in Flask - WTF

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,8 +4,11 @@
 
 {% block title %}{{ super() }}HELLO{% endblock title %}
 {% block content %}
+{% if username %}
+    <h1>Bienvenido, {{ username | capitalize }}</h1>
+{% endif %}
 {% if user_ip %}
-    <h1>Hello world, {{ user_ip }}</h1>
+    <h3>Hello world, {{ user_ip }}</h3>
     {% else %}
     <a href="{{ url_for('index')}}">Ir a inicio</a>
     {% endif %}
