--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,12 @@
 
 {% block body %}
     {% block navbar %}{% include "navbar.html" %}{% endblock navbar %}
-    
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" data-dismiss="alert" class='close'>&times;</button>
+            {{ message }}
+        </div>
+    {% endfor %}
     {% block content %}{% endblock content %}
+    {% block scripts %}{{ super() }}{% endblock scripts %}
 {% endblock body %}
